--- a/index.html
+++ b/index.html
@@ -17,31 +17,42 @@
       </nav>
     </header>
     <main>
-        <section id="home">
-            <h2>Bem-vindo</h2>
-            <p>Bem-vindo ao meu site! Aqui você encontra diversas informações úteis.</p>
-        </section>
+      <section id="home">
+        <h2>Bem-vindo</h2>
+        <p>
+          Bem-vindo ao meu site! Aqui você encontra diversas informações úteis.
+        </p>
+      </section>
 
-        <section id="about">
-            <h2>Sobre Nós</h2>
-            <article>
-                <h3>Nossa História</h3>
-                <p>Fundado em 2024, nosso site tem como missão fornecer conteúdo de qualidade.</p>
-            </article>
-            <aside>
-                <h4>Dica</h4>
-                <p>Não deixe de conferir nosso blog para mais informações!</p>
-            </aside>
-        </section>
+      <section id="about">
+        <h2>Sobre Nós</h2>
+        <article>
+          <h3>Nossa História</h3>
+          <p>
+            Fundado em 2024, nosso site tem como missão fornecer conteúdo de
+            qualidade.
+          </p>
+        </article>
+        <aside>
+          <h4>Dica</h4>
+          <p>Não deixe de conferir nosso blog para mais informações!</p>
+        </aside>
+      </section>
 
-        <section id="contact">
-            <h2>Contato</h2>
-            <p>Entre em contato conosco pelo formulário abaixo.</p>
-        </section>
+      <section id="contact">
+        <h2>Contato</h2>
+        <p>Entre em contato conosco pelo formulário abaixo.</p>
+      </section>
     </main>
-
-
-
-
+    <footer>
+      <p>&copy; 2024 Meu Site Exemplo. Todos os direitos reservados.</p>
+      <nav>
+        <ul>
+          <li><a href="#home">Início</a></li>
+          <li><a href="#about">Sobre</a></li>
+          <li><a href="#contact">Contato</a></li>
+        </ul>
+      </nav>
+    </footer>
   </body>
 </html>
